<resources>
    <string name="app_name">PhotoFrame</string>

    <string name="delay">Delay in seconds</string>
    <string name="photos_folder">Photos folder</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="choose_current_folder">Choose current folder</string>
    <string name="select_photo_folder">Select photo folder</string>
    <string name="select_valid_photo_folder">Select valid photo folder</string>
    <string name="choose_delay">Select slideshow delay [sec]:</string>
    <string name="include_subdirectories">Include subdirectories</string>
    <string name="settings">Settings</string>
    <string name="release_for_settings">Release for settings</string>

    <string name="no_photos_to_load">There are no photos to load!</string>
    <string name="cannot_read_sd_card">Cannot read your storage!</string>

    <string name="key_default_shared_preferences">key_default_shared_preferences</string>
    <string name="key_delay">key_delay</string>
    <string name="key_photos_folder_path">key_photos_folder_path</string>
    <string name="key_include_subdirectories">key_include_subdirectories</string>

</resources>
