<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dimension_32dp"
    android:paddingRight="@dimen/dimension_32dp"
    android:paddingTop="@dimen/dimension_16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/choose_delay" />

            <EditText
                android:id="@+id/delay_edit_text"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:hint="@string/delay"
                android:inputType="number" />

            <TextView
                android:id="@+id/photos_folder_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="start"
                android:hint="@string/photos_folder" />

            <TextView
                android:id="@+id/choose_photo_folder_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/select_photo_folder"
                android:textColor="@color/colorAccent" />

            <CheckBox
                android:id="@+id/include_subdirectories_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/include_subdirectories"
                android:textColor="@color/almost_white" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>