<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:picker="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/choose_delay" />

            <com.wefika.horizontalpicker.HorizontalPicker
                android:id="@+id/delay_number_picker"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:hint="@string/delay"
                android:textColor="@color/color_almost_white"
                picker:dividerSize="@dimen/dimension_8dp" />

            <TextView
                android:id="@+id/photos_folder_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:ellipsize="start"
                android:hint="@string/photos_folder" />

            <TextView
                android:id="@+id/choose_photo_folder_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:text="@string/choose_photo_folder"
                android:textColor="@color/colorAccent" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
